Closed
Bug 1339852
Opened 9 years ago
Closed 9 years ago
Terminating "Gpu Process" while in PDF presentation mode causes a tab crash
Categories
(Core :: Graphics, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla54
People
(Reporter: asimonca, Assigned: dvander)
References
Details
(Whiteboard: [gfx-noted])
Attachments
(1 file)
|
1.79 KB,
patch
|
mattwoodrow
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
[Affected versions]:
- 53.0a2 (id: 20170215004022)
[Affected platforms]:
- Windows 10 x64 & Windows 7 x86
[Steps to reproduce]:
1. Check about:config if the pref "layers.gpu-process.enabled" is set to "true"
2. Check the Windows task manager for 3 Firefox processes (some of them may be registered as a background process)
3. Add the "layers.gpu-process.max_restarts" integer preference in about:config and set it to 3.
4. Restart Firefox.
5. Go to any of the following links and press "Switch to presentation mode"
https://people.eecs.berkeley.edu/~istoica/papers/2003/cacm03.pdf
http://www.pdf995.com/samples/pdf.pdf
https://www.irs.gov/pub/irs-pdf/fw4.pdf
https://www.nasa.gov/pdf/703154main_earth_art-ebook.pdf
6. Go to "about:support" in a different window and find the "Terminate GPU Process" button in the "Graphics" section, press it and make sure there are only 2 processes left in Task Manager. (1 in Apps & 1 in Background Processes).
[Expected result]:
- There are no issues with the document or Firefox itself.
[Actual result]:
- The tab crashes.
[Regression range]:
- Not a regression. New feature.
[Additional notes]:
- One of the crash reports:
https://crash-stats.mozilla.com/report/index/955a0a6b-ca63-44de-9417-b86252170215
Updated•9 years ago
|
Blocks: e10s-gpu-win
David, is this a "crash path" that we should catch?
Flags: needinfo?(dvander)
Priority: -- → P3
Whiteboard: [gfx-noted]
| Assignee | ||
Comment 2•9 years ago
|
||
Yes.
Assignee: nobody → dvander
Status: NEW → ASSIGNED
Flags: needinfo?(dvander)
| Assignee | ||
Comment 3•9 years ago
|
||
Attachment #8837885 -
Flags: review?(matt.woodrow)
Updated•9 years ago
|
Attachment #8837885 -
Flags: review?(matt.woodrow) → review+
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/0bce3085f669
Fix a content canvas crash caused by losing IPC during a GPU process restart. (bug 1339852, r=mattwoodrow)
Comment 5•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Updated•9 years ago
|
Severity: normal → major
Comment on attachment 8837885 [details] [diff] [review]
fix
Approval Request Comment
[Feature/Bug causing the regression]: New to 53, compositor process.
[User impact if declined]: Avoidable crashes in the new feature.
[Is this code covered by automated tests?]: No
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]:
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]: Low risk.
[Why is the change risky/not risky?]: Null pointer check equivalent.
[String changes made/needed]:
Attachment #8837885 -
Flags: approval-mozilla-aurora?
Comment 7•9 years ago
|
||
Comment on attachment 8837885 [details] [diff] [review]
fix
New crash in 53, let's take it on aurora before the merge.
Attachment #8837885 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 8•9 years ago
|
||
| bugherder uplift | ||
Comment 9•9 years ago
|
||
I reproduced this issue using Fx 54.0a1(build ID:20170215030342), on Windows 10 x64.
I can confirm this issue is fixed, I verified Fx 54.0a1, build ID: 20170305030210 and Fx53.0a2, build ID: 20170306004003 on Windows 10 x64.
Cheers!
You need to log in
before you can comment on or make changes to this bug.
Description
•