Bug 1339852 - Fix a content canvas crash caused by losing IPC during a GPU process restart. r=mattwoodrow, a=lizzard

--HG--
extra : source : 0bce3085f669c0a62e268141847c994158fffc53